# transbymep

./: .gitignore  404.html  LICENSE.md  MANIFEST.in  README.md  dmitriy.py  index.html  mkdocs.yml  objects.inv  parallel_integrator.py  pyproject.toml  run_optimization.py
.github/workflows/: release.yaml  tests.yaml
Popcornn/: __init__.py  run_optimization.py
Popcornn/optimization/: losses.py  path_optimizer_orig.py
Popcornn/paths/: base_path.py  bezier.py
Popcornn/potentials/: lennard_jones.py  repel.py
Popcornn/tools/: __init__.py  metrics.py
configs/: test.yaml  test_Epvre.yaml  test_Epvre_mag.yaml  test_Evre.yaml  test_mlp_constant.yaml  test_vre.yaml
docs/: gen_ref_pages.py  index.md
docs/example_docs/code/: hints.md  source.md
docs/example_docs/installation/: install.md  pyproject.md
docs/example_docs/intro/: why.md
docs/example_docs/mkdocs/: docs.md
docs/example_docs/setup/: basics.md  name.md  prep.md
example_docs/about/: changelog.html  conduct.html  license.html
example_docs/code/: hints.html  source.html  tests.html
example_docs/github/: commits.html  workflows.html
example_docs/installation/: install.html  pyproject.html
example_docs/intro/: resources.html  why.html
example_docs/mkdocs/: build.html  docs.html
example_docs/other/: apps.html  linting.html
example_docs/setup/: basics.html  name.html  prep.html
examples/: func_run.py  run.py  run_optimization.py  visualize_growing_string.py
examples/configs/: 002.xyz  002.yaml  066.xyz  066.yaml  1399.yaml  1399_interp.xyz  44939.xyz  44939_popcornn.xyz  6445.xyz  6445.yaml  6445_interp.xyz  6445_popcornn.xyz  6961.yaml  6961_interp.xyz  7780_interp.xyz  acetaldehyde.xyz  acetaldehyde.yaml  test.yaml  visualize_growing_string.yaml  wolfe.yaml
examples/configs/paths/: mlp_small.yaml  mlpdist_small.yaml
examples/configs/runs/: Acetaldehyde.yaml  Epvre.yaml  Evre.yaml  schwefel.yaml
examples/plots/: loss_curve.csv
playground/: autograd_test.py  eqx_example.py  example.py  split_diff_static.py
plots/vre_half/: test_vre.yaml
plots/vre_works_0/: mlp_test.yaml  test_vre.yaml
popcornn/: run_optimization.py  run_optimization_orig.py
popcornn/optimization/: __init__.py  gradient_descent.py  gradient_descent_discrete.py  gradient_descent_orig.py  losses.py  path_optimizer.py  update_minima.py
popcornn/paths/: __init__.py  attention.py  base_path.py  conv.py  mlp.py  mlp_dist.py
popcornn/playground/: test_integrator.py
popcornn/potentials/: base_potential.py  constant.py  escaip.py  morse.py  repel.py
popcornn/tools/: __init__.py  ase.py  config_orig.py  integrator.py  logging.py  metrics.py  preprocess.py  scheduler.py  visualize_orig.py
reference/: SUMMARY.html
reference/chemistry_MEP_TS_optimization/: dmitriy.html  run_optimization.html  run_optimization_orig.html
reference/chemistry_MEP_TS_optimization/examples/: sample.html
reference/chemistry_MEP_TS_optimization/mechanics/: action.html  lagrangians.html
reference/chemistry_MEP_TS_optimization/optimization/: gradient_descent.html  gradient_descent_discrete.html  gradient_descent_orig.html  initialize_path.html  losses.html  path_metrics_orig.html  path_optimizer.html  update_minima.html
reference/chemistry_MEP_TS_optimization/paths/: b_spline.html  base_path.html  elastic_band.html  initialize.html  mlp.html
reference/chemistry_MEP_TS_optimization/playground/: eqx_example.html  example.html  split_diff_static.html  test_integrator.html
reference/chemistry_MEP_TS_optimization/potentials/: base_class.html  constant.html  muller_brown.html  wolfe_schlegel.html
reference/chemistry_MEP_TS_optimization/tools/: arg_parser.html  configs.html  integrator.html  logging.html  metrics.html  visualize.html
search/: search_index.js  search_index.json
src/: just_for_fun.py
src/chemistry_MEP_TS_optimization/: dmitriy.py  run_optimization.py  run_optimization_orig.py
src/chemistry_MEP_TS_optimization/mechanics/: action.py
src/ddp/: __init__.py  ddp.py  ddp_data.py
src/mechanics/: action.py  lagrangians.py
src/optimization/: __init__.py  gradient_descent.py  gradient_descent_discrete.py  gradient_descent_orig.py  initialize_path.py  integrator.py  losses.py  path_optimizer.py  update_minima.py
src/optimizations/: __init__.py  gradient_descent.py
src/paths/: __init__.py  b_spline.py  base_path.py  elastic_band.py  initialize.py  mlp.py  mlp_dist.py  mlp_invdist.py  mlp_nonreddist.py  mlp_nonredinvdist.py
src/paths/configs/: bspline_test.yaml
src/potentials/: __init__.py  ase.py  base_class.py  base_potential.py  constant.py  harmonic.py  lennard_jones.py  lj.py  muller_brown.py  newtonnet.py  wolfe_schlegel.py
src/tools/: __init__.py  adaptivity.py  arg_parser.py  configs.py  initialize.py  integrator.py  logging.py  metrics.py  parallel_integrator.py  runge_kutta.py  solvers.py  tableau.py  visualize.py
tests/: requirements.txt  test_run_optimization.py
tests/configs/: Epvre_test.yaml  acetaldehyde.yaml  config_RWS.yaml  config_pes.yaml  test_elastic_band.yaml
tests/optimization/: test_gradient_descent.py
tests/path_optimization/: test_parallel_integrators.py  test_run_optimization.py  test_serial_integrators.py
tests/paths/: test_mlpdist.py
transbymep/: __init__.py  run_optimization.py  run_optimization_orig.py
transbymep/mechanics/: lagrangians.py
transbymep/optimization/: gradient_descent.py  gradient_descent_discrete.py  gradient_descent_orig.py  initialize_path.py  losses.py  path_optimizer.py
transbymep/paths/: __init__.py  b_spline.py  base_path.py  elastic_band.py  initialize.py  linear.py  mlp.py  mlp_dist.py  mlp_expdist.py  mlp_nonreddist.py  mlpdist.py
transbymep/playground/: example.py
transbymep/potentials/: __init__.py  base_class.py  base_potential.py  constant.py  escaip.py  harmonic.py  lennard_jones.py  morse.py  muller_brown.py  newtonnet.py  repel.py  schwefel.py  wolfe_schlegel.py
transbymep/tools/: __init__.py  arg_parser.py  ase.py  configs.py  integrator.py  integrator_orig.py  logging.py  metrics.py  preprocess.py  scheduler.py  visualize.py
(+35 files in other folders)
