[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chemistry_MEP_TS_optimization"
description="A Python package description goes here."
version = "0.0.1"
readme = "README.md"
license = { text = "BSD-3" }
authors = [{ name = "YourName", email = "YourName@email.com" }]
keywords = ["MyKeyword1", "MyKeyword2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.9, <3.13"
dependencies = [
    "numpy",
    "fsspec==2024.3.1",
    "gmpy2 @ file:///tmp/build/80754af9/gmpy2_1645455533097/work",
    "iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work",
    "jax @ file:///croot/jax_1698071562881/work",
    "jaxlib @ file:///croot/jaxlib_1697733688272/work/dist/jaxlib-0.4.16.dev20231019-cp310-cp310-manylinux2014_x86_64.whl#sha256=7eb10d4ed48c0dbe541a90aec610f4c2177d85c457df4d3e7b32e993bd6502c9",
    "jaxtyping @ file:///home/conda/feedstock_root/build_artifacts/jaxtyping_1709843444490/work",
    "Jinja2 @ file:///croot/jinja2_1706733616596/work",
    "kiwisolver @ file:///croot/kiwisolver_1672387140495/work",
    "MarkupSafe @ file:///croot/markupsafe_1704205993651/work",
    "matplotlib @ file:///croot/matplotlib-suite_1713336378214/work",
    "ml-dtypes @ file:///croot/ml_dtypes_1702691022032/work",
    "mpmath @ file:///croot/mpmath_1690848262763/work",
    "networkx @ file:///croot/networkx_1690561992265/work",
    "opt-einsum @ file:///tmp/build/80754af9/opt_einsum_1621500238896/work",
    "packaging @ file:///croot/packaging_1710807400464/work",
    "pillow @ file:///croot/pillow_1714398848491/work",
    "pluggy @ file:///home/conda/feedstock_root/build_artifacts/pluggy_1713667077545/work",
    "ply==3.11",
    "pyparsing @ file:///opt/conda/conda-bld/pyparsing_1661452539315/work",
    "PyQt5==5.15.10",
    "PyQt5-sip @ file:///croot/pyqt-split_1698769088074/work/pyqt_sip",
    "pytest @ file:///home/conda/feedstock_root/build_artifacts/pytest_1714308352747/work",
    "python-dateutil @ file:///croot/python-dateutil_1715108784345/work",
    "PyYAML @ file:///home/conda/feedstock_root/build_artifacts/pyyaml_1695373428874/work",
    "scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy-split_1714794084074/work/dist/scipy-1.13.0-cp310-cp310-linux_x86_64.whl#sha256=1b23d09acbb18bf2ef511e042f27dfb1ef2ab90dde7fc585f2f7ce45f62bb827",
    "sip @ file:///croot/sip_1698675935381/work",
    "six @ file:///tmp/build/80754af9/six_1644875935023/work",
    "sympy @ file:///croot/sympy_1701397643339/work",
    "tomli @ file:///opt/conda/conda-bld/tomli_1657175507142/work",
    "torch==2.3.0",
    "torchdiffeq==0.2.3",
    "tornado @ file:///croot/tornado_1696936946304/work",
    "typeguard @ file:///croot/typeguard_1674631871499/work",
    "typing_extensions @ file:///croot/typing_extensions_1705599297034/work",
    "unicodedata2 @ file:///croot/unicodedata2_1713212950228/work"
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=3.0.0", "ruff>=0.0.285"]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.1"
]

[project.urls]
repository = "https://github.com/Quantum-Accelerators/chemistry_MEP_TS_optimization"
documentation = "https://quantum-accelerators.github.io/chemistry_MEP_TS_optimization/"
changelog = "https://github.com/Quantum-Accelerators/chemistry_MEP_TS_optimization/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
chemistry_MEP_TS_optimization = ["py.typed"]

[tool.pyright]
include = ["chemistry_MEP_TS_optimization"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-p no:warnings", "--import-mode=importlib"]
xfail_strict = true
log_cli_level = "warn"
pythonpath = "src"
testpaths = ["tests"]

[tool.black]
exclude = '''
/(
    \.git
  | \.tox
)/
'''
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
skip_gitignore = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except ImportError",
]

[tool.ruff]
lint.select = [
  "A",      # flake8-builtins
  "ARG",    # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle error
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # numpy-specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T20",    # flake8-print
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "TRIO",   # flake8-trio
  "UP",     # pyupgrade
  "W",      # pycodestyle warning
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E501",   # Line too long
  "ISC001",   # single-line-implicit-string-concatenation
  "PERF203",  # try-except-in-loop
  "PLR",    # Design related pylint codes
  "PT004",  # Fixture does not return anything
  "PT011",  # pytest.raises
  "PT012",  # pytest.raises
  "RET505", # Unnecessary `elif` after `return`
]
src = ["src"]
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
lint.pydocstyle.convention = "numpy"
lint.isort.known-first-party = ["chemistry_MEP_TS_optimization"]
lint.isort.required-imports = ["from __future__ import annotations"]
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ANN", "ARG", "D", "E402", "PTH", "S101"]

[tool.docformatter]
pre-summary-newline = true
black = true

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = false
disable_error_code = "annotation-unchecked"
